--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<h1>I AM <br><span id="typed"></span></h1>					
 				</div>
 				<p>
-					I am currently studying in the Programmer class, Does University. I enjoy exploring the world of the internet. Programming, design, blogging, social media, whatever it has been since the last 4 years. Sometimes I take several projects from friends or freelancers. I uploaded several projects in my Github account, feel free to see them at any time :)
+					Hi! I'm a Frontend Developer who loves to experiment with the latest tech stack. Whether it's using React environment to build dynamic user interfaces, or exploring new design trends to create visually stunning websites. I uploaded several projects in my Github account, feel free to see them at any time :)
 				</p>				
 			</div>
 		</div>
@@ -181,7 +181,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["LEARNER", "PROGRAMMER", "DIGITAL ENTHUSIAST"],
+		strings: ["LEARNER", "PROGRAMMER"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
