--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 					<ul class="social list-flat right">
 						<li><a href="mailto:agsn.does6@gmail.com"><i class="fa fa-send"></i></a></li>
 						<li><a href="http://twitter.com/agsn_"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/#"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/#"><i class="fa fa-behance"></i></a></li>
+<!-- 						<li><a href="http://dribbble.com/#"><i class="fa fa-dribbble"></i></a></li>
+						<li><a href="http://behance.com/#"><i class="fa fa-behance"></i></a></li> -->
 					</ul>
 			    </div>
 			</div>
