--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<h1>I AM <br><span id="typed"></span></h1>					
 				</div>
 				<p>
-					Hi! I'm a Frontend Developer who loves to experiment with the latest tech stack. Whether it's using React environment to build dynamic user interfaces, or exploring new design trends to create visually stunning websites. I uploaded several projects in my Github account, feel free to see them at any time :)
+					I'm a Frontend Developer who loves to experiment with the latest tech stack. Whether it's using React environment to build dynamic user interfaces, or exploring new design trends to create visually stunning websites. I uploaded several projects in my Github account, feel free to see them at any time :)
 				</p>				
 			</div>
 		</div>
